# wt-skin-manager

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
assets/: filters.json  main.css  tailwind.css
src/: api.rs  config.rs  installer.rs  main.rs
src/api/: mod.rs  networking.rs  structures.rs
src/backend/: config.rs  installer.rs  mod.rs  structures.rs  uninstaller.rs
src/components/: mod.rs
src/components/combobox/: component.rs
src/components/pagination/: component.rs
src/ui/: camo_card.rs  camo_card_uninstall.rs  camo_feed.rs  camo_page.rs  config_modal.rs  filters.rs  home.rs  install_card.rs  mod.rs  uninstall_card.rs  uninstall_page.rs
