[package]
name = "wt-skin-manager"
version = "0.1.0"
authors = ["Slyvred <remihage2003@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["form"] }
serde = "1.0.228"
serde_json = "1.0.149"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
