[package]
name = "wt-skin-manager"
version = "0.1.0"
authors = ["Slyvred <remihage2003@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["form"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.52.3"
zip = "8.6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw-w64-gcc"
rustflags = [
  "-C",
  "link-arg=-Wl,--subsystem,windows"
]
# rustflags = [
#     "-C", "link-arg=/SUBSYSTEM:WINDOWS",
#     "-C", "link-arg=/ENTRY:mainCRTStartup",
# ]
